# GPG_Message

./: Makefile.am  configure.ac  encrypt.c  encrypt.h  gui.cxx  gui.fl  gui.h  main.cxx
linux/: gpg_message.desktop.in
osx/: Info.plist  Info.plist.in  Projector.icns
